tests/rosetta/out/Haskell/abc-problem.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/abc-problem.hs:150:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/abc-problem.hs:143:1
                 /workspace/mochi/tests/rosetta/out/Haskell/abc-problem.hs:150:1
    |
150 | main = do
    | ^^^^
